--- a/views/pages/css-review/index.html
+++ b/views/pages/css-review/index.html
@@ -7,14 +7,13 @@
     <style>
       aside {
         width: 300px;
-        margin-right: 1em;
         border: 1px solid #ccc;
       }
       article, section {
         height: 100%;
       }
       section {
-        padding: 1em 0;
+        padding: 1em;
         overflow: auto;
       }
     </style>
